namespace Carfleet
{
    public class Delivery
    {
        private _hazardousMaterial = bool
        private _material = string[]


        public function Delivery(bool hazardousMaterial, string[] material)
        {
            _hazardousMaterial = hazardousMaterial;
            _material = material;
        }

    }
}
