namespace Carfleet
{
    public class Truck : Vehicule
    {

    }
}
