namespace Carfleet
{
    public class TruckDriver : Driver
    {

    }
}