@startuml
class Entreprise
class Driver
class Person
class Vehicule
class TruckDriver
class Truck
class Delivery
exception DriverNotFoundException 
exception VehiculeNotFoundException
exception DriverNotAvailabelException
exception TruckHazardousMaterialException
exception TruckDriverHazardousicenseException


Entreprise : -drivers : Driver[]
Entreprise : -vehicules : Vehicule[]
Entreprise : -drivers : TruckDriver[]
Entreprise : -vehicules : Truck[]
Entreprise : +assignVehiculeToDriver(chassisNumber string, driverEmailaddress string) : void
Entreprise : -getDriverByEmailaddress(driverEmailaddress string) : Driver
Entreprise : -getVehiculeByChassisNumber(chassisNumber string) : Vehicule
Entreprise : -orderDelivery(material : string[], hazardousMaterial=false : boolean) : void

Driver : -vehicule : Vehicule
Driver : +takeAVehicule(vehicule Vehicule) : void

Person : -addressEmail : string
Person : +Person(emailaddress string)
Person : +getEmail() : string

Vehicule : +Vehicule(chassisNumber : string)
Vehicule : +toString() : string
Vehicule : -chassisNumber : string 

TruckDriver : -licenseDateExpiration : datetime
TruckDriver : +setVehicule() : Vehicule
TruckDriver : +securityCheck() : void
TruckDriver : -prepareDelivery(delivery Delivery) : void

Truck : -canTakeDangerItems : bool

Delivery : -hazardousMaterial : bool
Delivery : -material :  string[]
Delivery : +Delivery(material : string[], hazardousMaterial : bool)


Entreprise o-- Driver
Entreprise o-- Vehicule
Driver --|> Person
TruckDriver --|> Driver
Truck --|> Vehicule
Entreprise +-- DriverNotFoundException 
Entreprise +-- VehiculeNotFoundException 
Driver ..> Vehicule
TruckDriver ..> Delivery
Driver ..> DriverNotAvailabelException : << throw >> 
TruckDriver ..> DriverNotAvailabelException : << throw >> 
TruckDriver ..> TruckHazardousMaterialException : << throw >>
TruckDriver ..> TruckDriverHazardousicenseException : << throw >>

@enduml